# SimSUSY

./: .coveragerc  .gitignore  .travis.yml  README.rst  makefile  mypy.ini  pyproject.toml  readme.md  setup.cfg  setup.py
.github/workflows/: type-check.yaml
misc/: .gitignore  bibliography.bib  convention.tex  vscode_settings.sample
simsusy/: __init__.py  __main__.py  abs_calculator.py  abs_model.py  default_values.json  pyslha_customize.py  simsusy.py  utility.py
simsusy/contrib/: __init__.py  data_formats.py  generator_helper.py  temp_slha.py
simsusy/mssm/: __init__.py  abstract.py  ewsb_parameters.py  input.py  library.py  mg5_tree_calculator.py  model.py  tanbeta_resum_calculator.py  tree_calculator.py
simsusy/tests/: mssm.slha2.in  sample.slha  test_abs_model.py  test_mssm_input.py  test_utility.py
simsusy/tests/outputs/: mssm1.mg5_tree_calculator.v1  mssm1.mg5_tree_calculator.v2  mssm1.tree_calculator.v1  mssm1.tree_calculator.v2  mssm2.tree_calculator.v2
