[tool.poetry]
name = "simsusy"
version = "0.0.2"
description = "A Python package for simple SUSY spectrum calculation"
authors = ["Sho Iwamoto (Misho) <webmaster@misho-web.com>"]
license = "Apache 2.0"
readme = "README.rst"
repository = "https://github.com/misho104/simsusy"

[tool.poetry.dependencies]
python = "^3.5"
click = "^7.0"
numpy = "^1.16"
yaslha = "^0.2.1"

[tool.poetry.dev-dependencies]
nose = "^1.3"
coverage = "^4.5"
coveralls = "^1.5"
mypy =                  {version = "^0.710", python = "^3.6"}
flake8 =                {version = "^3.7",   python = "^3.6"}
flake8-builtins =       {version = "^1.4",   python = "^3.6"}
flake8-commas =         {version = "^2.0",   python = "^3.6"}
flake8-comprehensions = {version = "^1.4",   python = "^3.6"}
flake8-docstrings =     {version = "^1.3",   python = "^3.6"}
flake8-isort =          {version = "^2.6",   python = "^3.6"}
flake8-logging-format = {version = "^0.6",   python = "3.6"}
pep8-naming =           {version = "^0.7",   python = "3.6"}

[tool.poetry.scripts]
simsusy = "simsusy.simsusy:simsusy_main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
